tests/invalid/ontology/upgrade-object-type-set-unit-name-without-symbol.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading an object type setting the unit name but not the unit symbol attribute is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:mc"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <!-- Unit name is set -->
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" data-type="string:10:mc" unit-name="meters"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
